# house-crawler

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  crawl_state.json  crontab  docker-compose.yml  house_crawler.db  notifications.py  pyproject.toml  scrapy.cfg
.claude/: AGENTS.md
.github/: screenshot_target.json
.github/workflows/: claude-code-review.yml  claude-issue.yml  publish.yml
analysis/: charts.py  deal_score.py  loader.py  metrics.py  scoring.py
cli/: main.py
config/: neighborhoods.py  postal_codes.py
crawler/: items.py  pipelines.py  settings.py  state.py
crawler/handlers/: curl_cffi_handler.py
crawler/middlewares/: retry_on_rate_limit.py  user_agent.py
crawler/spiders/: funda.py  funda_forsale.py  funda_sold.py
db/: engine.py  models.py
house_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: app-entrypoint.sh  crawl.sh  take_screenshot.py
tests/: conftest.py  test_metrics.py  test_models.py  test_scoring.py
tests/fixtures/: sample_listings.json
