[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "house-crawler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "scrapy>=2.11",
    "curl_cffi>=0.7",
    "sqlalchemy>=2.0",
    "pydantic>=2.5",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "click>=8.1",
    "python-dotenv>=1.0",
    "fake-useragent>=1.4",
    "funda-scraper>=0.3",
    "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
house-crawler = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["crawler*", "db*", "analysis*", "config*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
